--- a/app/Gemfile
+++ b/app/Gemfile
@@ -42,6 +42,12 @@ gem "tzinfo-data", platforms: %i[ mingw mswin x64_mingw jruby ]
 # Reduces boot times through caching; required in config/boot.rb
 gem "bootsnap", require: false
 
+# Postgresql fulltextsearch
+gem "pg_search", "~> 2.3"
+
+# Pagination
+gem "pagy", "~> 6.0"
+
 # Use Sass to process CSS
 # gem "sassc-rails"
 
@@ -70,3 +76,5 @@ group :test do
   gem "selenium-webdriver"
   gem "webdrivers"
 end
+
+
